# lux

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh  learn-lux.md  magic-lux.md  uninstall.sh
.github/workflows/: publish-crate.yml
examples/: conversions.lux  crawl-readme.txt  functions.lux  hello.lux  io.lux  keep.lux  option.lux  shell.lux  tour.lux  types.lux
src/: ast.rs  convert.rs  diagnostic.rs  interpreter.rs  learn.rs  lexer.rs  lib.rs  magic.rs  main.rs  parser.rs
src/convert/: go.rs  mod.rs  rust.rs  swift.rs
tests/: learn.rs  magic.rs  transpile.rs
